Some Minute Bugs Fixed

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
     text-align: left;
     margin-left: 2px;
     text-align: left;
-    background-color: greenyellow;
+    background-color: grey;
     border-color: #fb0066;
     border-width: 2px;
 }
